# qua-qsim

./: .README.md.swp  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
quaqsim/: __init__.py  quaqsim.architectures.resonator.py  simulate.py
quaqsim/api/: _simulation_request.py  backend.py  frontend.py  utils.py
quaqsim/api/frontend/: __init__.py  _utils.py  dashboard.py  editor.py
quaqsim/program_ast/: _if.py  assign.py  play.py  ramp.py  ramp_to_zero.py
quaqsim/program_ast/expressions/: array_cell.py  definition.py
quaqsim/program_dict_to_program_compiler/visitors/: assign_visitor.py  for_visitor.py  if_visitor.py  play_visitor.py  program_visitor.py  ramp_to_zero_visitor.py  ramp_visitor.py  statements_visitor.py
quaqsim/program_to_quantum_pulse_sim_compiler/: context.py  quantum_pulse_sim_compiler.py  timeline_to_schedule_compiler.py
quaqsim/program_to_quantum_pulse_sim_compiler/schedules/: context.py  delay.py  measure.py  phase_offset.py  play.py  reset_phase.py  simultaneous.py  timeline.py  timeline_IQ.py  timeline_schedules.py  timeline_single.py
quaqsim/program_to_quantum_pulse_sim_compiler/visitors/: align_visitor.py  array_definition_visitor.py  assign_visitor.py  definition_visitor.py  for_visitor.py  frame_rotation_visitor.py  if_visitor.py  measure_visitor.py  node_visitor.py  play_visitor.py  program_visitor.py  pulses.py  reset_frame_visitor.py  wait_visitor.py  (+1 more)
test/: conftest.py  test_allxy.py  test_rabi.py  test_rabi_error_amp.py  test_rabi_plot.py  test_ramsey.py  test_rb_fix.py
test/api/: test_backend.py
(+13 files in other folders)
